# capybara_phishing

./: .eslintrc.json  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  background.js  config.template.js  content.js  create_icons.sh  jest.config.js  jest.setup.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  spec.md  styles.css  webpack.config.js  worker.js
.github/workflows/: ci.yml
config/: babel.config.js  jest.config.js
coverage/: lcov.info
coverage/lcov-report/: content.js.html  index.html
docs/: spec.md  webllm_readme.md
ml/: .gitignore  ML.md  README.md  pyproject.toml
ml/ml/data/synthetic/: test.jsonl  train.jsonl  val.jsonl
ml/outputs/2025-01-18/09-50-08/.hydra/: config.yaml  hydra.yaml
ml/outputs/2025-01-18/09-50-28/.hydra/: config.yaml  hydra.yaml
ml/outputs/2025-01-18/09-50-58/.hydra/: hydra.yaml
ml/outputs/2025-01-18/09-51-27/.hydra/: config.yaml  hydra.yaml
ml/outputs/2025-01-18/09-55-03/.hydra/: hydra.yaml
ml/src/config/: model_config.py  model_config.yaml
ml/src/data/: dataset.py  synthetic_data.py
ml/src/training/: check_dir.py  train.py  trainer.py
src/content/: content.js  providers.js  ui.js
src/popup/: popup.html  popup.js
tests/: content.test.js
tests/setup/: jest.setup.js
tests/unit/content/: content.test.js  providers.test.js  ui.test.js
